--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
         </div>
         <div class="classicos-img">
-            <img src="img/old.png" alt="" width="430px">
+            <img src="img/old.png" alt="" >
         </div>
 
 
