--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
     <header>
         <section class="video-container">
-           <video autoplay muted loop="video-bg">
+           <video autoplay muted loop="video-bg" id="video">
             <source src="video/cars.mp4" type="video/mp4">
            </video>
            <div class="video-texto">
-            <h1>Welcome to dreams</h1>
-            <p>Descover the new</p>
+            <h1>Redefina o extraordinário.</h1>
+            
             <a href="#products" class="btn">Explore</a>
            </div>
         </section>
